configured it to work on https using Caddy (LetsEncrypt is automatic now)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,25 @@ services:
     build: .
     environment:
       - NODE_ENV=production
+    expose:
+      - "3000"
+    restart: unless-stopped
+
+  caddy:
+    image: caddy:2-alpine
+    container_name: caddy
     ports:
-      - 3000:3000
-      - 80:3000
-      - 443:3000
+      - "80:80"
+      - "443:443"
+      - "443:443/udp"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    restart: unless-stopped
+    depends_on:
+      - app
+
+volumes:
+  caddy_data:
+  caddy_config:
